# http_cpp

./: .env  CMakeLists.txt  README.md  server.cpp
includes/: Router.h  dotenv.h  get.h  globals.h  handle_session.h  http_server.h  http_server.hpp  includes.h  is_middleware.hpp  json_parse.h  middleware.h  middleware.hpp  middlewares.h  next.h  next.hpp  post.h  request.h  response.h  router.h  router.hpp  server_static.h  time_calculator.h  utils.h
public/: app.js  index.html  style.css
srcs/: CMakeLists.txt  global_Router.cpp
srcs/controllers/: get.cpp  post.cpp
srcs/dotenv/: dotenv.cpp  glob_variable.cpp  globals.cpp
srcs/http/: CMakeLists.txt
srcs/http/core/: http_server.cpp  middleware.cpp  next.cpp  request.cpp  response.cpp  serve_static.cpp
srcs/http/router/: Router.cpp  router.cpp
srcs/http/utils/: get_mime_type.cpp  serve_static.cpp
srcs/middlewares/: json_parse.cpp
srcs/router/: Router.cpp
utils/: CMakeLists.txt  handle_session.cpp
